# MIPS-lite

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: toolchain.cmake
docs/: BASICTESTING.MD  RAW_HAZARDS.MD  final-demo-output.txt
include/: functional_simulator.h  log_instr_set.h  memory_interface.h  mips_instruction.h  mips_lite_defs.h  mips_mem_parser.h  reg_type.h  register_file.h  stats.h  utilities.h
scripts/: mips-lite_compiler.py  mips-lite_decompiler.py
src/: functional_simulator.cpp  logical_instruction_set.cpp  main.cpp  mips_instruction.cpp  mips_mem_parser.cpp  stats.cpp  utilities.cpp
tests/: CMakeLists.txt
tests/functional_simulator/: CMakeLists.txt  decode_stage_tests.cpp  exe_stage_tests.cpp  fetch_stage_tests.cpp  functional_simulator_integration_tests.cpp  functional_simulator_tests.cpp
tests/instruction_sets/: CMakeLists.txt  logical_instruction_test.cpp
tests/libs/: CMakeLists.txt  test_stats.cpp
tests/mem_parser/: CMakeLists.txt  memory_parser_tests.cpp
tests/mips_instruction/: CMakeLists.txt  mips_instruction_tests.cpp
tests/proj-setup/: CMakeLists.txt
tests/proj_setup/: CMakeLists.txt  setup_test.cpp
tests/reg_type/: CMakeLists.txt  test_reg_type.cpp
tests/utils_function/: CMakeLists.txt  ctest_05172025_0431pm.txt  utilities.cpp  utilities.h  utilities_test.cpp
traces/: compileTraces.sh  random.txt
traces/asm_hand_calcs/: AND_with_comments.txt  OR_with_comments.txt  XOR_with_comments.txt  mem_access_with_comments.txt
traces/assembly/: AND.txt  ARITHMETIC.txt  LOGICAL.txt  OR.txt  XOR.txt  add.txt  addi.txt  basic-raw-haz.txt  beq-nottaken.txt  beq-taken.txt  bz-nottaken.txt  bz-taken.txt  jr.txt  mem_access.txt  mul.txt  muli.txt  raw-haz-chaining.txt  raw-haz-load.txt  raw-haz-memwb-stage.txt  sub.txt  subi.txt
traces/assembly/arithmetic/: add.txt
traces/hex/: ANDoutput.txt  ARITHMETIC.txt  LOGICAL.txt  ORoutput.txt  XORoutput.txt  add.txt  addi.txt  basic-raw-haz.txt  beq-nottaken.txt  beq-taken.txt  bz-nottaken.txt  bz-taken.txt  jr.txt  mem_access_output.txt  mul.txt  muli.txt  randomtrace.txt  raw-haz-chaining.txt  raw-haz-load.txt  raw-haz-memwb-stage.txt  sub.txt  subi.txt
